--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,6 @@ Temporary Items
 !.vscode/*.code-snippets
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos
+
+# user define
+.env
